# treehouse

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: competitive-landscape.md
e2e/: agent-tabs.spec.ts  helpers.ts  smoke.spec.ts  workspace.spec.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fs_api.rs  lib.rs  main.rs  state.rs  storage.rs  test_support.rs  user_config.rs
src-tauri/src/agent/: hooks.rs  mod.rs  patterns.rs  supervisor.rs
src-tauri/src/diff/: compute.rs  mod.rs
src-tauri/src/forge/: cli.rs  github.rs  gitlab.rs  mod.rs  netrc.rs  remote.rs  types.rs
src-tauri/src/fs_watch/: mod.rs
src-tauri/src/ipc/: commands.rs  events.rs
src-tauri/src/lsp/: config.rs  mod.rs  overrides.rs  registry.rs  root.rs  supervisor.rs
src-tauri/src/pty/: manager.rs  mod.rs
src-tauri/src/util/: errors.rs  ids.rs
src-tauri/src/workspace/: mod.rs  repo.rs
src-tauri/src/worktree/: git_ops.rs  manager.rs  mod.rs  setup.rs  status.rs
src/components/: BaseRefPicker.tsx  CommandPalette.tsx  FileFinder.tsx  IssueChip.tsx  IssuesPanel.tsx  MrBar.tsx  NewWorktreeDialog.tsx  ProblemsList.tsx  SendQueueButton.tsx  SettingsMenu.tsx  SystemFileViewer.tsx  Toaster.tsx
src/ipc/: client.ts  types.ts
src/lib/: agent.ts  ansi.test.ts  ansi.ts  ci-status.test.ts  ci-status.ts  errors.test.ts  errors.ts  fuzzy.ts  (+8 more)
(+122 files in other folders)
