[package]
name = "agent-ide"
version = "0.1.0"
description = "Agent-centric IDE with parallel worktree agents"
authors = ["Kyle Walters"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "agent_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "io-util", "time", "fs"] }
parking_lot = "0.12"
git2 = { version = "0.19", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "10", features = ["serde-compat", "no-serde-warnings"] }
ulid = { version = "1", features = ["serde"] }
dashmap = "6"
notify-debouncer-full = "0.3"
ignore = "0.4"
portable-pty = "0.8"
bytes = "1"

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
